tests/ui/parser/mbe_missing_right_paren.stderr
error: this file contains an unclosed delimiter
  --> $DIR/mbe_missing_right_paren.rs:6:23
   |
LL | macro_rules! abc(ؼ
   |                 - unclosed delimiter
...
LL | // Declarative Macros
   |                       ^

error: aborting due to 1 previous error

