tests/ui/parser/mbe_missing_right_paren.rs
<<<<<<< HEAD
// error-pattern: this file contains an unclosed delimiter
macro_rules! abc(ؼ

// ferrocene-annotations: fls_xa7lp0zg1ol2
// Declarative Macros
=======
// ignore-tidy-trailing-newlines
//@ error-pattern: this file contains an unclosed delimiter
macro_rules! abc(ؼ
>>>>>>> pull-upstream-temp--do-not-use-for-real-code
